# pipeline-buider-ai

./: .gitignore  AI_ASSISTANT_GUIDE.md  BACKEND_INTEGRATION_COMPLETE.md  BACKEND_INTEGRATION_PLAN.md  CLEANUP_SUMMARY.md  COMMANDS.md  CONNEXION_GUIDE.md  DASHBOARD_ROADMAP.md  DEBUG_MODULES.md  LICENSE  MIGRATION_AXIOS_TO_FETCH.md  Makefile  NEXT_STEPS.md  PROJECT_STRUCTURE.md  README.md  SESSION_SUMMARY.md  SETUP_AI.md  SUMMARY.md  TESTING_GUIDE.md  TODOS.md
.github/workflows/: README.md  ci.yml  docker-build.yml  docker-compose-test.yml
.github/workflows-disabled/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251107_0821-c126159880e7_initial_migration_with_user_pipeline_.py  20251112_add_user_security_fields.py  20251114_0941-c3e496182e32_add_security_tables_for_auth_logs_.py  20251114_1330-93f501d8a7d8_add_uploaded_files_table.py  20251121_0912-9c624815aac6_add_schedules_table.py  20251126_1024-7a9f2d2f03ee_add_dashboards_tables.py
backend/app/: config.py  main.py
backend/app/airflow/: __init__.py  dag_generator.py
backend/app/api/: websocket.py
backend/app/api/dependencies/: __init__.py  auth.py  database.py
backend/app/api/v1/: ai.py  analytics.py  auth.py  connections.py  dashboards.py  executions.py  modules.py  pipelines.py  pipelines.py.backup  schedules.py  security.py  transforms.py  uploads.py  users.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: audit.py  audit_logger.py  code_executor.py  config.py  encryption.py  file_resolver.py  rate_limit.py  security.py  token_blacklist.py
backend/app/data/: modules_definitions.py
backend/app/db/: base.py  compat.py  session.py
backend/app/db/models/: __init__.py  active_session.py  audit_event.py  auth_log.py  connection.py  dashboard.py  dashboard_share.py  execution.py  module.py  pipeline.py  schedule.py  uploaded_file.py  user.py
backend/app/integrations/: __init__.py  airflow_client.py
backend/app/modules/extractors/: __init__.py  csv.py  excel.py  json.py  parquet.py  rest_api_extractor.py
backend/app/modules/loaders/: csv.py
backend/app/modules/transformers/: clean.py  python_transform.py  python_transformer.py  sql_transform.py
backend/app/schemas/: __init__.py  ai.py  analytics.py  auth.py  connection.py  dashboard.py  execution.py  module.py  pipeline.py  schedule.py  uploaded_file.py  user.py
backend/app/services/: ai_service.py  connection_service.py  dashboard_data_service.py  dashboard_service.py
backend/app/services/connectors/: __init__.py  base.py  mongodb.py  mysql.py  postgres.py  rest_api.py  s3.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: __init__.py  cleanup.py  data.py  notifications.py  pipeline.py
backend/dags/: pipeline_d4d0806c_0972_4c16_8299_3c1833a2adb3.py
backend/dags/operators/: __init__.py  etl_operator.py
backend/docs/: AUTHENTICATION.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENTS.md
backend/scripts/: add_more_modules.py  create_admin.py  seed_modules.py  update_modules_to_file_upload.py
backend/tests/: README.md
backend/tests/test_api/: test_auth.py  test_transforms.py
backend/tests/unit/: test_extractors.py  test_transformers.py
docs/: AIRFLOW_INTEGRATION.md  API.md  MODULES.md  NEXT_STEPS.md  QUICK_START.md
docs/diagrams/: ARCHITECTURE.md  DATABASE_SCHEMA.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: ai.ts  analytics.ts  auth.ts  client.ts  connections.ts  dashboards.ts  executions.ts  modules.ts  pipelines.ts  schedules.ts  security.ts  uploads.ts
frontend/src/components/: AIAssistantModal.tsx  CodeEditorField.tsx  CodeEditorModal.tsx  DashboardLayout.tsx  DataPreview.tsx  FileUploadField.tsx  ModulePalette.tsx  NodeConfigPanel.tsx  NodePreviewModal.tsx  ProtectedRoute.tsx
frontend/src/config/: monaco.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardEditPage.tsx  DashboardPage.tsx  DashboardViewPage.tsx  DashboardsPage.tsx  DataSourcesPage.tsx  LoginPage.tsx  PipelineBuilderPage.tsx  PipelinesPage.tsx  RegisterPage.tsx  SchedulesPage.tsx  SecurityPage.tsx  SettingsPage.tsx  TestModules.tsx  TransformationsPage.tsx  UploadsPage.tsx
frontend/src/stores/: analyticsStore.ts  authStore.ts  dashboardStore.ts  pipelineStore.ts  scheduleStore.ts  uploadsStore.ts
frontend/src/types/: analytics.ts  api.ts  auth.ts  dashboard.ts  dataSource.ts  pipeline.ts  schedule.ts  (+3 more)
infrastructure/docker/: docker-compose.yml  docker-compose.yml.backup
screenshots/: README.md
scripts/: setup-dev.sh
(+16 files in other folders)
