[project]
name = "etl-builder-backend"
version = "1.0.0"
description = "ETL/ELT Builder - Backend API with FastAPI"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "LogiData AI", email = "dev@logidata.ai" }
]
keywords = ["etl", "elt", "data-pipeline", "fastapi", "airflow"]

dependencies = [
    # FastAPI and Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",

    # Redis
    "redis>=5.0.1",
    "hiredis>=2.3.2",

    # Celery
    "celery>=5.3.6",
    "flower>=2.0.1",

    # Apache Airflow Client
    "apache-airflow-client>=2.8.0",
    "requests>=2.31.0",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",

    # Data Processing
    "pandas>=2.2.0",
    "polars>=0.20.6",
    "numpy>=1.26.3",
    "pyarrow>=15.0.0",

    # Database Connectors
    "pymongo>=4.6.1",
    "pymysql>=1.1.0",
    "sqlalchemy-utils>=0.41.1",

    # Object Storage
    "minio>=7.2.3",
    "boto3>=1.34.34",

    # AI/ML
    "scikit-learn>=1.4.0",
    "spacy>=3.7.2",
    "openai>=1.10.0",

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",

    # WebSocket
    "websockets>=12.0",

    # Validation & Parsing
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.2",

    # Monitoring & Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "sentry-sdk[fastapi]>=1.40.0",

    # Utils
    "email-validator>=2.1.0",
    "python-slugify>=8.0.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code Quality
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "mypy>=1.8.0",
    "ruff>=0.1.15",

    # Type Stubs
    "types-redis>=4.6.0.20240106",
    "types-requests>=2.31.0.20240106",

    # Development Tools
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "watchdog>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "mypy>=1.8.0",
    "ruff>=0.1.15",
    "types-redis>=4.6.0.20240106",
    "types-requests>=2.31.0.20240106",
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]
